# HANDCALCS

./: .gitignore  four_bolt_extended_stiffened_thin_end_plate_v1_0.ipynb  purlin_deflection_v1_0.py  pyproject.toml  section_properties_demo.py
src/handcalcs_adapter/: material.py  section.py
src/handcalcs_adapter/data/: CNP GRP.csv  CNP GRP.xlsx
steel_connection/: four_bolt_extended_stiffened_thin_end_plate_si.py  four_bolt_extended_stiffened_thin_end_plate_us.py  four_bolt_extended_stiffened_thin_end_plate_v1_0.ipynb  four_bolt_extended_stiffened_thin_end_plate_v1_0.py  weld_shear_setrength.ipynb
steel_member/: purlin_deflection.ipynb
utils/materials/: steel.py
utils/sections/: enum.py  loaders.py  properties.py
utils/units/: structural_units.py
