[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "handcalcs-adapter"
version = "0.1.0"
description = "Domain-oriented hand calculation utilities for structural engineering"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Daniel" }
]

dependencies = [
    # add runtime deps here, e.g.:
    # "numpy>=1.26",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
